# Ra-Testbed

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
data/: 069500.KS.parquet  114260.KS.parquet  132030.KS.parquet  GLD.parquet  SPY.parquet  TLT.parquet
docs/: PROJECT_BRIEF.md
src/ra_testbed/: app.py
src/ra_testbed/backtest/: compare.py  engine.py  lookahead.py  regimes.py
src/ra_testbed/data/: loader.py
src/ra_testbed/metrics/: risk.py
src/ra_testbed/report/: __init__.py  reliability.py
src/ra_testbed/strategies/: __init__.py  base.py  factory.py  fixed_weight.py  moving_average.py
tests/: test_compare.py  test_engine.py  test_loader.py  test_lookahead.py  test_metrics.py  test_regimes.py  test_reliability.py  test_strategies.py  test_strategy_factory.py
